--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,43 @@
 {
     "cSpell.words": [
+        "backticks",
+        "Chronometrics",
         "cloner",
+        "cout",
+        "Cucco",
         "deserialization",
         "despawn",
         "despawned",
         "despawns",
+        "directoryfolder",
+        "Factorio",
+        "Funkin",
+        "Haxe",
+        "iostream",
+        "ipairs",
+        "Kilburn",
+        "Kyojo",
+        "laggy",
+        "Luacheck",
+        "Lytebringr's",
+        "modder",
         "modders",
         "namespacing",
+        "pasteable",
         "respawn",
         "respawned",
+        "Sanio's",
+        "steamapps",
+        "steelman",
+        "syscall",
+        "Taz's",
+        "tostring",
+        "TSTL",
         "unserializable",
-        "userdata"
+        "userdata",
+        "Wofsuage's",
+        "Xalum",
+        "xmlvalidation",
+        "Zamiel"
     ]
 }
