--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,55 @@
 {
-    "cSpell.words": [
-        "backticks",
-        "Chronometrics",
-        "cloner",
-        "cout",
-        "Cucco",
-        "deserialization",
-        "despawn",
-        "despawned",
-        "despawns",
-        "directoryfolder",
-        "Factorio",
-        "Funkin",
-        "Haxe",
-        "iostream",
-        "ipairs",
-        "Kilburn",
-        "Kyojo",
-        "laggy",
-        "Luacheck",
-        "Lytebringr's",
-        "modder",
-        "modders",
-        "namespacing",
-        "pasteable",
-        "respawn",
-        "respawned",
-        "Sanio's",
-        "steamapps",
-        "steelman",
-        "syscall",
-        "Taz's",
-        "tostring",
-        "TSTL",
-        "unserializable",
-        "userdata",
-        "Wofsuage's",
-        "Xalum",
-        "xmlvalidation",
-        "Zamiel"
-    ]
+  // Linux line endings are used in this project
+  "files.eol": "\n",
+
+  // Automatically removing all trailing whitespace when saving a file
+  "files.trimTrailingWhitespace": true,
+
+  "cSpell.words": [
+    "backticks",
+    "Chronometrics",
+    "cloner",
+    "cout",
+    "Cucco",
+    "deserialization",
+    "despawn",
+    "despawned",
+    "despawns",
+    "directoryfolder",
+    "Factorio",
+    "Funkin",
+    "gamestate",
+    "Haxe",
+    "inputconfigs",
+    "iostream",
+    "ipairs",
+    "Kilburn",
+    "Kyojo",
+    "laggy",
+    "Luacheck",
+    "Lytebringr's",
+    "modder",
+    "modders",
+    "namespacing",
+    "Nicalis",
+    "pasteable",
+    "persistentgamedata",
+    "redownload",
+    "redownloading",
+    "respawn",
+    "respawned",
+    "Sanio's",
+    "steamapps",
+    "steelman",
+    "syscall",
+    "Taz's",
+    "tostring",
+    "TSTL",
+    "unserializable",
+    "userdata",
+    "Wofsuage's",
+    "Xalum",
+    "xmlvalidation",
+    "Zamiel"
+  ]
 }
